HEAD:

	* Improved emulation of the MT-32 display. It now behaves a lot closer to the real device.
	  The new behaviour depends on the control ROM version, so that the most prominent quirks
	  are now emulated. Additionally, the LCD shows the startup banner and the SysEx checksum
	  error. The built-in LCD font has been reworked as well to closely match the hardware one
	  yet the new appearance makes the grid of pixels visible. Clicking on the LCD now resets
	  it to the main (Master Volume) mode. (#50, #66)
	* Enabled the built-in Qt support for high-dpi displays which should improve the UI look
	  on Windows systems mainly. The Qt library version 5.6 or above is required for this
	  function to work. In order to explicitly disable UI scaling, the user may set environment
	  variable QT_AUTO_SCREEN_SCALE_FACTOR to 0. (#79)

2021-05-22:

	1.9.0 released.

	* Updated mt32emu library to version 2.5.1.
	* Added support for partial bitwise ROM dumps (#56). Now, the synth can operate with
	  a pair of control ROM files and a pair of PCM ROM files, which are merged when needed.
	* Reworked ROMSelectionDialog to permit selection of multiple ROM files of each type
	  and to support known machine configurations to simplify ROM selection.
	* Added a new option to the main menu to permit a choice whether to show native system
	  file selection dialogs or internal dialogs provided by Qt. This may become in handy in
	  case the native dialogs lack some functions or exhibit unwanted behaviour otherwise.

2021-01-17:

	1.8.0 released.

	* Added mode "Hide to tray on close". When enabled, the application does not exit when the user closes the main window.
	  To exit the application, the corresponding menu items can be used in menu "Tools" and the tray icon menu.
	* Added possibility to select output device on macOS with the CoreAudio driver.
	* Reworked internal MIDI message routing and buffering in case multiple MIDI streams are attached to a single (pinned)